@@ -1,3 +1,7 @@
+2006-01-11 Jens Tkotz <jens@peino.de> 1.5.2-RC3-cvs-b4
+
+ * Fix: Due to my regexp UNknowledge Pelles hints in RC2-cvs-b16 broke upload with netPBM.
+
 2006-01-11 Jens Tkotz <jens@peino.de> 1.5.2-RC3-cvs-b3
 
  * Fix: fitToResize in view_photo should not be applied to movies :)
